Fix broken styles

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,6 +5,10 @@
   height: 4.4rem;
   background-color: var(--primary-colour-dark);
   transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 /* Dark mode styles */
