--- a/src/css/home.css
+++ b/src/css/home.css
@@ -117,6 +117,9 @@ Spacing System (px):
   object-position: center;
   margin-bottom: 4rem;
   margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
   border: 3px solid #fcd5ce;
 }
 
